--- a/WebDev Projects/mobiltelefonok_peterteszary/main-elements/footer.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/main-elements/footer.html
@@ -1,10 +1,11 @@
-<div class="bg-ultra-dark p-2 d-flex flex-row justify-content-between px-5">
+<div class="bg-ultra-dark p-2 d-flex flex-column flex-md-row justify-content-between px-md-5">
     <div>
-    <p class="body text-light mt-3 ">Copyright 2023 | Mobileum - Teszáry Péter</p>
-</div>
-   <div class="d-flex flex-row ">
-    <a href="https://api.nasa.gov/" target="_blank" class="body text-light mt-3 mr-3">Github Repository</a>
-    <a href="privacy-policy.html" target="_blank" class="body text-light mt-3 ">Privacy Policy</a>
+        <p class="body text-light mt-3 text-center text-md-left">
+            Copyright 2023 | Mobileum - Teszáry Péter
+        </p>
     </div>
-
+    <div class="d-flex flex-column flex-md-row align-items-center">
+        <a href="https://github.com/peterteszary/Vasvari-Code-Repository-For-Study-Purposes/tree/main/WebDev%20Projects/mobiltelefonok_peterteszary"
+            target="_blank" class="body text-light mt-3 mx-3 text-center text-md-left">Github Repository</a>
+    </div>
 </div>
