--- a/WebDev Projects/mobiltelefonok_peterteszary/sections/devices-section.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/sections/devices-section.html
@@ -1,56 +1,56 @@
-  <section id="devices" class="py-5 bg-ultra-dark">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <div class="d-flex flex-wrap justify-content-center align-items-center">
-            <div class="col-md-4 col-lg-2 mb-4">
-              <a href="../telefonok/nokia3310.html">
-                <div class="device-card shadow--lg border--accent ">
-                  <div class="device-image" style="background-image: url('../images/nokia-3210.png')"></div>
-                  <div class="device-overlay"></div>
-                  <h3 class="device-title text-light">Nokia 3310</h3>
-                </div>
-              </a>
-            </div>
-            <div class="col-md-4 col-lg-2 mb-4 ">
-              <a href="../telefonok/iphone-4s.html">
-                <div class="device-card shadow--lg border--accent">
-                  <div class="device-image" style="background-image: url('../images/iphone-4s.png')"></div>
-                  <div class="device-overlay"></div>
-                  <h3 class="device-title text-light">iPhone 4s</h3>
-                </div>
-              </a>
-            </div>
-            <div class="col-md-4 col-lg-2 mb-4 ">
-              <a href="../telefonok/blackberry-8520.html">
-                <div class="device-card shadow--lg border--accent ">
-                  <div class="device-image" style="background-image: url('../images/BlackBerry-8520.png')"></div>
-                  <div class="device-overlay"></div>
-                  <h3 class="device-title text-light">BlackBerry 8520</h3>
-                </div>
-              </a>
-            </div>
-            <div class="col-md-4 col-lg-2 mb-4">
-              <a href="../telefonok/motorola-startac.html">
-                <div class="device-card shadow--lg border--accent">
-                  <div class="device-image" style="background-image: url('../images/motorola-startac.png')"></div>
-                  <div class="device-overlay"></div>
-                  <h3 class="device-title text-light">Motorola Startac</h3>
-                </div>
-              </a>
-            </div>
-            <div class="col-md-4 col-lg-2 mb-4">
-              <a href="../telefonok/sony-ericsson-xperia-pro.html">
-                <div class="device-card shadow--lg border--accent">
-                  <div class="device-image" style="background-image: url('../images/sony-ericsson-xperia-mini-pro-sk17.png')"></div>
-                  <div class="device-overlay"></div>
-                  <h3 class="device-title text-light">Sony Ericsson Xperia Pro</h3>
-                </div>
-              </a>
-            </div>
+<section id="devices" class="py-5 bg-ultra-dark">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <div class="d-flex flex-wrap justify-content-center align-items-center">
+          <div class="col-md-4 col-lg-2 mb-4">
+            <a href="../telefonok/nokia3310.html">
+              <div class="device-card shadow--lg border--accent ">
+                <div class="device-image" style="background-image: url('../images/nokia-3210.png')"></div>
+                <div class="device-overlay"></div>
+                <h3 class="device-title text-light">Nokia 3310</h3>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 col-lg-2 mb-4 ">
+            <a href="../telefonok/iphone-4s.html">
+              <div class="device-card shadow--lg border--accent">
+                <div class="device-image" style="background-image: url('../images/iphone-4s.png')"></div>
+                <div class="device-overlay"></div>
+                <h3 class="device-title text-light">iPhone 4s</h3>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 col-lg-2 mb-4 ">
+            <a href="../telefonok/blackberry-8520.html">
+              <div class="device-card shadow--lg border--accent ">
+                <div class="device-image" style="background-image: url('../images/BlackBerry-8520.png')"></div>
+                <div class="device-overlay"></div>
+                <h3 class="device-title text-light">BlackBerry 8520</h3>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 col-lg-2 mb-4">
+            <a href="../telefonok/motorola-startac.html">
+              <div class="device-card shadow--lg border--accent">
+                <div class="device-image" style="background-image: url('../images/motorola-startac.png')"></div>
+                <div class="device-overlay"></div>
+                <h3 class="device-title text-light">Motorola Startac</h3>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 col-lg-2 mb-4">
+            <a href="../telefonok/sony-ericsson-xperia-pro.html">
+              <div class="device-card shadow--lg border--accent">
+                <div class="device-image"
+                  style="background-image: url('../images/sony-ericsson-xperia-mini-pro-sk17.png')"></div>
+                <div class="device-overlay"></div>
+                <h3 class="device-title text-light">Sony Ericsson Xperia Pro</h3>
+              </div>
+            </a>
           </div>
         </div>
       </div>
     </div>
-  </section>
-
+  </div>
+</section>
