--- a/WebDev Projects/mobiltelefonok_peterteszary/telefonok/nokia3310.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/telefonok/nokia3310.html
@@ -32,7 +32,7 @@
     <!-- Heros Section End -->
 
     <!-- Nokia 3310 specifikáció táblázat -->
-    <section id="specifications" class="py-5 bg-dark">
+    <section id="specifications" class="py-5 bg--gradient-radial-two">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
