--- a/WebDev Projects/mobiltelefonok_peterteszary/egyedimobil.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/egyedimobil.html
@@ -1,27 +1,120 @@
 <!DOCTYPE html>
 <html lang="hu">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css.map" />
-    <link rel="stylesheet" href="css/mobilstyle.css" />
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <title>Mobiltelefonok</title>
-    <nav id="header-section"></nav>
-  </head>
-  <body>
-    
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="../images/phone-call.png" type="image/png">
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-  <div class="container bg-black">
-    <div class="row" height="50%"></div>
-  </div>
-  <script src="js/header.js"></script>
-  <script src="js/footer.js"></script>
+  <link rel="stylesheet" href="../css/mobilstyle.css" />
+  <title>A legfurcsább mobil</title>
+
+
+</head>
+
+<body>
+  <nav id="header"></nav>
+
+  <!-- Fejléc szekció -->
+
+  <section id="hero" class="hero bg-dark text-white py-5"
+    style="background-image: url('../images/mobile-hero.jpg'); background-size: cover; position: relative;">
+    <div class="px-4 py-5 my-5 text-center">
+      <img class="d-block mx-auto mb-4" src="../images/phone-call.png" alt="" width="57" height="57" />
+      <h1 class="display-5 fw-bold text-body-emphasis text-uppercase">
+        A legfurcsább mobil
+      </h1>
+    </div>
+  </section>
+  <!-- Heros Section End -->
+
+  <!-- Toshiba G450 összefoglaló -->
+  <section id="toshiba-g450" class="bg--gradient-radial-two py-5">
+    <div class="container">
+      <h2 class="text-center mb-4">Toshiba G450</h2>
+      <div class="row justify-content-center mb-4">
+        <div class="col-6">
+          <img class="w-100" src="../images/toshiba-g450.png" alt="Toshiba G450">
+        </div>
+      </div>
+      <p>
+        Az alábbiakban egy összefoglalót találsz a Toshiba G450 mobiltelefonról:
+      </p>
+      <p>
+        Kompakt méret: A Toshiba G450 egy rendkívül kompakt és könnyű mobiltelefon. Kényelmesen elfér a zsebedben vagy
+        táskádban, így könnyedén hordozhatod magaddal.
+      </p>
+      <p>
+        Kettős funkció: Ez a mobiltelefon nemcsak telefonálásra használható, hanem USB-modemként is működik.
+        Kapcsolódhatsz hozzá egy számítógéphez és internet-hozzáférést biztosíthat az adott helyen és időben.
+      </p>
+      <p>
+        Kijelző: Bár kicsi a mérete, a Toshiba G450 rendelkezik egy 1 hüvelykes OLED kijelzővel. A kijelzőn könnyedén
+        navigálhatsz az elérhető funkciók között és ellenőrizheted az alapvető információkat.
+      </p>
+      <p>
+        Telefongyártók együttműködése: A Toshiba G450-t közösen fejlesztette a Toshiba és a Vodafone. Ez az
+        együttműködés lehetővé tette egy olyan készülék létrehozását, amely kiváló minőségű hardverrel és
+        szolgáltatásokkal rendelkezik.
+      </p>
+      <p>
+        További funkciók: A Toshiba G450 egyéb hasznos funkciókat is kínál, mint például SMS- és MMS-üzenetküldés,
+        hangrögzítés, beépített FM rádió és MP3 lejátszó. Ezek a funkciók még sokoldalúbbá teszik a mobiltelefont.
+      </p>
+      <p>
+        Akkumulátor élettartam: A G450 akkumulátora hosszú üzemidőt biztosít, így kevesebb időt kell töltened a
+        töltővel. Ez különösen hasznos lehet, ha hosszú távon utazol vagy kevés hozzáférhető töltési lehetőséged van.
+      </p>
+      Fontos megjegyezni, hogy a Toshiba G450 mobiltelefon már régebben jelent meg, és a mobiltechnológia azóta jelentős
+      változásokon ment keresztül. Az összefoglaló alapján látható, hogy a Toshiba G450 olyan készülék, amely kompakt
+      méretével, kettős funkciójával és alapvető kommunikációs és multimédiás képességeivel megfelelő lehet egy
+      egyszerűbb használatra szánt mobiltelefonra vágyó felhasználóknak.
+      </p>
+      <ul>
+        <li>Kompakt méret: A Toshiba G450 egy rendkívül kompakt és könnyű mobiltelefon. Kényelmesen elfér a zsebedben
+          vagy táskádban, így könnyedén hordozhatod magaddal.</li>
+        <li>Kettős funkció: Ez a mobiltelefon nemcsak telefonálásra használható, hanem USB-modemként is működik.
+          Kapcsolódhatsz hozzá egy számítógéphez és internet-hozzáférést biztosíthat az adott helyen és időben.</li>
+        <li>Kijelző: Bár kicsi a mérete, a Toshiba G450 rendelkezik egy 1 hüvelykes OLED kijelzővel. A kijelzőn
+          könnyedén navigálhatsz az elérhető funkciók között és ellenőrizheted az alapvető információkat.</li>
+        <li>Telefongyártók együttműködése: A Toshiba G450-t közösen fejlesztette a Toshiba és a Vodafone. Ez az
+          együttműködés lehetővé tette egy olyan készülék létrehozását, amely kiváló minőségű hardverrel és
+          szolgáltatásokkal rendelkezik.</li>
+        <li>További funkciók: A Toshiba G450 egyéb hasznos funkciókat is kínál, mint például SMS- és MMS-üzenetküldés,
+          hangrögzítés, beépített FM rádió és MP3 lejátszó. Ezek a funkciók még sokoldalúbbá teszik a mobiltelefont.
+        </li>
+        <li>Akkumulátor élettartam: A G450 akkumulátora hosszú üzemidőt biztosít, így kevesebb időt kell töltened a
+          töltővel. Ez különösen hasznos lehet, ha hosszú távon utazol vagy kevés hozzáférhető töltési lehetőséged van.
+        </li>
+      </ul>
+    </div>
+  </section>
 
   <footer id="footer"></footer>
+  <script src="js/footer.js"></script>
+  <script>
+    loadFooter();
+  </script>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+    integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+    crossorigin="anonymous"></script>
+
+  <script src="js/header.js"></script>
+  <script>
+    loadHeader();
+  </script>
+</body>
+
 </html>
