--- a/WebDev Projects/mobiltelefonok_peterteszary/halozatok.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/halozatok.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../images/phone-call.png" type="image/png">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -25,12 +26,13 @@
         <div class="px-4 py-5 my-5 text-center">
             <img class="d-block mx-auto mb-4" src="../images/phone-call.png" alt="" width="57" height="57" />
             <h1 class="display-5 fw-bold text-body-emphasis text-uppercase">
-              Mobilhálózatok fejlődése
+                Mobilhálózatok fejlődése
             </h1>
         </div>
     </section>
     <!-- Heros Section End -->
-    <body class="bg-dark">
+
+    <body class="bg--gradient-radial">
         <div class="container py-5">
             <h1 class="text-center mb-5">Korszakok</h1>
             <table class="table text-light table-dark">
@@ -42,7 +44,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="h3 bg-ultra-dark" colspan="2">1G - 2G: Az analóg hálózatok korszaka</td>                        
+                        <td class="h3 bg-ultra-dark" colspan="2">1G - 2G: Az analóg hálózatok korszaka</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -67,12 +69,14 @@
                     <tr>
                         <td></td>
                         <td>Az 4G (negyedik generációs) hálózatok még nagyobb sebességet és kapacitást biztosítottak
-                            az adatátvitelhez. Ez lehetővé tette a gyorsabb internetböngészést, a streaming szolgáltatások
+                            az adatátvitelhez. Ez lehetővé tette a gyorsabb internetböngészést, a streaming
+                            szolgáltatások
                             élvezetét és az alkalmazások gyorsabb letöltését. Az 4G hálózatok hozzájárultak az
                             okostelefonok elterjedéséhez és a mobilalapú szolgáltatások fejlődéséhez.</td>
                     </tr>
                     <tr>
-                        <td class="h3 bg-ultra-dark" colspan="2">5G: Az ultragyors internet és a hálózatok összekapcsolása</td>
+                        <td class="h3 bg-ultra-dark" colspan="2">5G: Az ultragyors internet és a hálózatok
+                            összekapcsolása</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -85,25 +89,31 @@
                 </tbody>
             </table>
         </div>
-  
 
 
 
-    <footer id="footer"></footer>
-    <script src="js/footer.js"></script>
-    <script>
-      loadFooter();
-    </script>
-  
-  
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-  
-    <script src="js/header.js"></script>
-    <script>
-      loadHeader();
-    </script>
-  </body>
-  
-  </html>
+
+        <footer id="footer"></footer>
+        <script src="js/footer.js"></script>
+        <script>
+            loadFooter();
+        </script>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+            integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+            crossorigin="anonymous"></script>
+
+        <script src="js/header.js"></script>
+        <script>
+            loadHeader();
+        </script>
+    </body>
+
+</html>
