--- a/WebDev Projects/mobiltelefonok_peterteszary/kapcsolat.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/kapcsolat.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mobilhálózatok fejlődése</title>
+    <link rel="icon" href="../images/phone-call.png" type="image/png">
+    <title>Kapcsolat</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/mobilstyle.css" />
@@ -24,9 +25,9 @@
         </div>
     </section>
 
-    <div class="container-fluid p-5 bg-dark">
+    <div class="container-fluid p-5 bg--gradient-linear ">
         <div class="row justify-content-center">
-            <div class="col-md-6">
+            <div class="col-md-6 bg-ultra-dark border--accent shadow-lg p-4">
                 <form class="needs-validation" novalidate>
                     <div class="mb-3">
                         <label for="vezeteknev" class="form-label">Vezetéknév</label>
@@ -81,9 +82,11 @@
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+        crossorigin="anonymous"></script>
 
     <script src="js/header.js"></script>
     <script src="js/footer.js"></script>
