--- a/WebDev Projects/mobiltelefonok_peterteszary/main-elements/header.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/main-elements/header.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="../index.html">MOBILEUM</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -15,8 +16,12 @@
         <li class="nav-item">
           <a class="nav-link" href="../halozatok.html">Hálózatok</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../egyedimobil.html">A legfurcsább mobil</a>
+        </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="devicesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="devicesDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
             Készülékek
           </a>
           <div class="dropdown-menu" aria-labelledby="devicesDropdown">
