--- a/WebDev Projects/mobiltelefonok_peterteszary/sections/hero.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/sections/hero.html
@@ -1,39 +1,30 @@
 <!--     Hero Section
  -->
- <section id="hero"
- class="hero bg-dark text-white py-5"
- style="
+<section id="hero" class="hero bg-dark text-white py-5" style="
    background-image: url('../images/mobile-hero.jpg');
    background-size: cover;
    position: relative;
- "
->
- <div class="px-4 py-5 my-5 text-center">
-   <img
-     class="d-block mx-auto mb-4"
-     src="../images/phone-call.png"
-     alt=""
-     width="57"
-     height="57"
-   />
-   <h1 class="display-5 fw-bold text-body-emphasis text-uppercase">
-     Mobileum
-   </h1>
-   <div class="col-lg-6 mx-auto">
-     <p class="lead mb-4">
-       Üdvözöljük a Mobileum weboldalán. A mobiltelefonok történetéről,
-       korszakairól olvashat itt a kedves látogató. A menüpontok
-       segítségével áttekintheti a mobilkommunikáció fontos korszakait és
-       állomásait. Jó utazást kívánunk!
-     </p>
-     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-      <button type="button" class="btn btn--accent pulse btn-lg px-4 gap-3">
-        Mobiltörténelem
-      </button>
+ ">
+  <div class="px-4 py-5 my-5 text-center">
+    <img class="d-block mx-auto mb-4" src="../images/phone-call.png" alt="" width="57" height="57" />
+    <h1 class="display-5 fw-bold text-body-emphasis text-uppercase">
+      Mobileum
+    </h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">
+        Üdvözöljük a Mobileum weboldalán. A mobiltelefonok történetéről,
+        korszakairól olvashat itt a kedves látogató. A menüpontok
+        segítségével áttekintheti a mobilkommunikáció fontos korszakait és
+        állomásait. Jó utazást kívánunk!
+      </p>
+      <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+        <button type="button" class="btn btn--accent pulse btn-lg px-4 gap-3">
+          Mobiltörténelem
+        </button>
+
+      </div>
 
     </div>
-    
-   </div>
- </div>
+  </div>
 </section>
 <!--     Heros Section End -->
