mobilok.html rename

--- a/WebDev Projects/mobiltelefonok_peterteszary/main-elements/header.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/main-elements/header.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../index.html">Kezdőlap</a>
+          <a class="nav-link active" aria-current="page" href="../mobilok.html">Kezdőlap</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../mobiltortenelem.html">Mobiltörténelem</a>
