--- a/WebDev Projects/bootstrap_szeptember_2023/index.html
+++ b/WebDev Projects/bootstrap_szeptember_2023/index.html
@@ -50,7 +50,7 @@
                             </div>
                           </div>
 
-
+<!--felmennek a változások?-->
 
         </div>
     </div>
