--- a/FrontEnd/jquery/index.html
+++ b/FrontEnd/jquery/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>jquery</title>
-    <link rel="stylesheet" href="style.css">
-  
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="kek"></div>
-</body>
+    <button class="btn-kek">Gomb</button>
+    <div class="sarga"></div>
+  </body>
 </html>
 
-<script src="jquery-3.7.1.min.js"> </script>
-<script src="script.js"> </script>
+<script src="jquery-3.7.1.min.js"></script>
+<script src="script.js"></script>
