Committed for BugFix

--- a/FrontEnd/jquery/index.html
+++ b/FrontEnd/jquery/index.html
@@ -7,9 +7,28 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <input type="text">
+    <p id="be">Itt lesz az input mező tartalma.</p>
     <div class="kek"></div>
     <button class="btn-kek">Gomb</button>
     <div class="sarga"></div>
+    <div class="szinvalto"></div>
+    
+<hr>
+    <h1>Color Mixer</h1>
+
+    <div class="colorizer">
+      <label for="R">Red color (between 0 and 255):</label>
+      <input type="range" id="r" name="r" min="0" max="255">
+    </div>
+    <div class="colorizer">
+      <label for="G">Green color (between 0 and 255):</label>
+      <input type="range" id="g" name="g" min="0" max="255">
+    </div>
+    <div class="colorizer">
+      <label for="B">Blue color (between 0 and 255):</label>
+      <input type="range" id="b" name="b" min="0" max="255">
+    </div>
   </body>
 </html>
 
