--- a/WebDev Projects/bootstrap-gyakorlat/index.html
+++ b/WebDev Projects/bootstrap-gyakorlat/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kártyák</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
+
 <body>
     <div class="container">
         <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
@@ -27,18 +29,18 @@
                 </div>
             </div>
             <!--első kártya vége-->
-                <!--első kártya-->
-                <div class="card col-sm-12 col-md-6 col-lg-3">
-                    <img src="images/kutya.jpg" alt="Kutya" class="card-img-top">
-                    <div class="card-body">
-                        <p class="h4 text-center">Kutya</p>
-                    </div>
-                    <div class="card-footer">
-                        <button class="btn btn-outline-primary d-block mx-auto">Részletek</button>
-                    </div>
+            <!--első kártya-->
+            <div class="card col-sm-12 col-md-6 col-lg-3">
+                <img src="images/kutya.jpg" alt="Kutya" class="card-img-top">
+                <div class="card-body">
+                    <p class="h4 text-center">Kutya</p>
                 </div>
-                <!--első kártya vége-->
-                    <!--első kártya-->
+                <div class="card-footer">
+                    <button class="btn btn-outline-primary d-block mx-auto">Részletek</button>
+                </div>
+            </div>
+            <!--első kártya vége-->
+            <!--első kártya-->
             <div class="card col-sm-12 col-md-6 col-lg-3">
                 <img src="images/kv.jpg" alt="KV" class="card-img-top">
                 <div class="card-body">
@@ -49,19 +51,26 @@
                 </div>
             </div>
             <!--első kártya vége-->
-                <!--első kártya-->
-                <div class="card col-sm-12 col-md-6 col-lg-3">
-                    <img src="images/rozmar.jpg" alt="Rozmár" class="card-img-top">
-                    <div class="card-body">
-                        <p class="h4 text-center">Rozmár</p>
-                    </div>
-                    <div class="card-footer">
-                        <button class="btn btn-outline-primary d-block mx-auto">Részletek</button>
-                    </div>
+            <!--első kártya-->
+            <div class="card col-sm-12 col-md-6 col-lg-3">
+                <img src="images/rozmar.jpg" alt="Rozmár" class="card-img-top">
+                <div class="card-body">
+                    <p class="h4 text-center text-danger">Rozmár</p>
                 </div>
-                <!--első kártya vége-->
+                <div class="card-footer">
+                    <button class="btn btn-outline-primary d-block mx-auto">Részletek</button>
+                </div>
+            </div>
+            <!--első kártya vége-->
+        </div>
+        <div class="row bg-secondary">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <img src="images/kutya.jpg" alt="kutya">
+            </div>
+            
         </div>
     </div>
-    
+
 </body>
+
 </html>
